# NeuralFlow

./: .gitignore  README.md  docker-compose.dev.yml  package.json  pnpm-lock.yaml  rebuild-history.sh
apps/api/: .env.example  Dockerfile  __init__.py  config.py  main.py  pyproject.toml
apps/api/agents/: orchestrator.py  prompts.py
apps/api/db/: __init__.py  database.py
apps/api/engine/: executor.py
apps/api/models/: __init__.py  execution.py  flow.py  user.py
apps/api/routers/: __init__.py  auth.py  chat.py  flows.py  ws.py
apps/api/services/: __init__.py  auth_utils.py  mcp_client.py
apps/api/tests/: conftest.py  test_auth.py  test_flows.py  test_health.py
apps/web/: .env.example  Dockerfile  next.config.js  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/auth/callback/: page.tsx
apps/web/app/chat/: page.tsx
apps/web/app/flows/[id]/: page.tsx
apps/web/components/chat/: ChatInterface.module.css  ChatInterface.tsx
apps/web/components/dashboard/: DashboardContent.module.css  DashboardContent.tsx
apps/web/components/flow/: FlowEditor.module.css  FlowEditor.tsx  NodeConfigPanel.module.css  NodeConfigPanel.tsx  NodePalette.module.css  NodePalette.tsx
apps/web/components/landing/: LandingPage.module.css  LandingPage.tsx
apps/web/components/layout/: Sidebar.module.css  Sidebar.tsx  TopBar.module.css  TopBar.tsx
apps/web/components/ui/: Button.module.css  Button.tsx  Card.module.css  Card.tsx
apps/web/hooks/: useAuthStore.ts
apps/web/lib/: api.ts  toolRegistry.ts  ws.ts
(+4 files in other folders)
